--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,17 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Rafik" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
+        <!-- Primary brand color. -->
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="colorPrimary">@color/MediumSpringGreen</item>
+        <item name="colorPrimaryVariant">@color/white</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/MediumSpringGreen</item>
+        <item name="colorSecondaryVariant">@color/DarkTurquoise</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <!-- Customize your theme here. -->
+        <item name="colorAccent">@color/MediumSpringGreen</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
