whatsapp chat link

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="primaryColor">#ffffff</color>
     <color name="primaryLightColor">#fba82c</color>
     <color name="primaryDarkColor">#cccccc</color>
-    <color name="secondaryColor">#0bcbff</color>
+    <color name="secondaryColor">#302F2F</color>
     <color name="secondaryLightColor">#34e5fb</color>
     <color name="secondaryDarkColor">#36b1d7</color>
     <color name="primaryTextColor">#0bcbff</color>
