--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -11,11 +11,11 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:contentDescription="@string/app_name"
             android:id="@+id/imageView2"
             android:layout_width="@dimen/_200sdp"
             android:layout_height="@dimen/_200sdp"
             android:layout_marginTop="@dimen/_64sdp"
+            android:contentDescription="@string/app_name"
             android:layoutDirection="ltr"
             android:src="@drawable/rafik_logo"
             app:layout_constraintEnd_toEndOf="parent"
@@ -26,14 +26,15 @@
             android:id="@+id/organic_fertilizer_btn"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="match_parent"
-            android:layout_marginHorizontal="@dimen/_24sdp"
             android:layout_height="@dimen/_60sdp"
+            android:layout_marginHorizontal="@dimen/_24sdp"
+            android:layout_marginTop="@dimen/_32sdp"
             android:text="@string/you_need_an_organic_fertilizer"
+            android:textSize="@dimen/_14ssp"
+            android:textStyle="bold"
             app:cornerRadius="@dimen/_15sdp"
-            android:textSize="@dimen/_16ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="@dimen/_32sdp"
             app:layout_constraintTop_toBottomOf="@+id/imageView2"
             app:strokeColor="#7CC644" />
 
@@ -42,24 +43,29 @@
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_60sdp"
+            android:textStyle="bold"
             android:layout_marginHorizontal="@dimen/_24sdp"
-            android:text="@string/producing_an_organic_product_or_selling_it"
-            android:textSize="@dimen/_16ssp"
-            app:cornerRadius="@dimen/_15sdp"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="@string/producing_an_organic_product_or_selling_it"
+            android:textSize="@dimen/_14ssp"
+            app:cornerRadius="@dimen/_15sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/organic_fertilizer_btn"
             app:strokeColor="#7CC644" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
+            android:id="@+id/contact_us_layout"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:clickable="true"
+            android:focusable="true"
             android:gravity="center"
             android:layoutDirection="ltr"
-            android:layout_marginBottom="@dimen/_8sdp"
+            android:orientation="horizontal"
+            android:padding="@dimen/_4sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -73,10 +79,10 @@
                 android:id="@+id/mobile_number_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_48sdp"
-                android:text="@string/rafik_phone_number"
-                android:textSize="@dimen/_18ssp"
+                android:layout_marginStart="@dimen/_8sdp"
                 android:gravity="center_vertical"
-                android:layout_marginStart="@dimen/_8sdp" />
+                android:text="@string/contact_us"
+                android:textSize="@dimen/_18ssp" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
