--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -16,4 +16,9 @@
         <item name="colorAccent">@color/secondaryColor</item>
 
     </style>
+
+    <style name="MyToolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
+        <item name="android:background">@color/night_toolbar_background</item>
+    </style>
+
 </resources>
