--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,4 +17,10 @@
 
     </style>
     <style name="Theme.Rafik" parent="Base.Theme.Rafik" />
+
+    <style name="MyToolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
+        <item name="android:background">@color/day_toolbar_background</item>
+    </style>
+
+
 </resources>
