sign in , otp , SplashScreen ,gradle ,date ,domain ,registration update

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="secondaryTextColor">#000000</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="white">#FFFFFF</color>
+    <color name="md_red_400">#F34340</color>
     <color name="black">#000000</color>
     <color name="GreenYellow">#ADFF2F</color>
     <color name="YellowGreen">#9ACD32</color>
