--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,11 +11,33 @@
         tools:layout="@layout/fragment_splash_screen"
         android:label="SplashScreen" >
         <action
+            android:id="@+id/action_splashScreen_to_signInFragment"
+            app:destination="@id/signInFragment" />
+        <action
             android:id="@+id/action_splashScreen_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
     <fragment
+        tools:layout="@layout/fragment_home_screen"
         android:id="@+id/homeFragment"
         android:name="com.example.rafik.ui.home.HomeFragment"
         android:label="HomeFragment" />
+    <fragment
+        android:id="@+id/signInFragment"
+        tools:layout="@layout/fragment_sign_in"
+        android:name="com.example.rafik.ui.registration.SignInFragment"
+        android:label="SignInFragment" >
+        <action
+            android:id="@+id/action_signInFragment_to_otpTestFrag"
+            app:destination="@id/otpTestFrag" />
+    </fragment>
+    <fragment
+        android:id="@+id/otpTestFrag"
+        tools:layout="@layout/fragment_otp_auth"
+        android:name="com.example.rafik.ui.registration.OtpAuthFrag"
+        android:label="OtpTestFrag" >
+        <action
+            android:id="@+id/action_otpTestFrag_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
