--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -29,12 +29,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            >
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
+                android:layout_height="match_parent">
 
                 <ImageView
                     android:id="@+id/imageView2"
@@ -80,7 +79,6 @@
                     app:layout_constraintTop_toBottomOf="@+id/organic_fertilizer_btn"
                     app:strokeColor="@color/base_green_color" />
 
-
                 <Button
                     android:id="@+id/product_for_sale"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
@@ -117,6 +115,7 @@
                         android:id="@+id/whatsapp_iv"
                         android:layout_width="@dimen/_32sdp"
                         android:layout_height="@dimen/_32sdp"
+                        android:contentDescription="@string/todo"
                         android:src="@drawable/ic_whatsapp" />
 
                     <TextView
@@ -130,6 +129,17 @@
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
+                <Button
+                    android:id="@+id/sign_out"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/signout"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/contact_us_layout"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/contact_us_layout"
+                    app:layout_constraintVertical_bias="0.04000002" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
