--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,7 +18,6 @@
             app:destination="@id/homeFragment" />
     </fragment>
     <fragment
-        tools:layout="@layout/fragment_home_screen"
         android:id="@+id/homeFragment"
         android:name="com.example.rafik.ui.home.HomeFragment"
         android:label="HomeFragment"
@@ -29,6 +28,10 @@
         <action
             android:id="@+id/action_homeFragment_to_trainingFragment"
             app:destination="@id/trainingFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_signInFragment"
+            app:destination="@id/signInFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/organicFertilizerFragment"
