--- a/app/src/main/res/layout/fragment_otp_auth.xml
+++ b/app/src/main/res/layout/fragment_otp_auth.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="user"
             type="com.example.rafik.domian.entity.User" />
@@ -13,19 +15,32 @@
         android:layout_height="match_parent"
         tools:context=".ui.registration.OtpAuthFrag">
 
-        <!--Edittext for getting otp from user-->
+
+        <ImageView
+            android:id="@+id/img_hexagon"
+            android:layout_width="180dp"
+            android:layout_height="170dp"
+            android:layout_gravity="end"
+            android:contentDescription="@android:string/ok"
+            android:scaleType="fitXY"
+            android:src="@drawable/artificial_plant"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="@string/bias1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_24sdp"
+            android:layout_marginTop="@dimen/_16sdp"
             android:text="@string/verification_code"
             android:textSize="@dimen/_25ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.100000024" />
+            app:layout_constraintTop_toBottomOf="@+id/img_hexagon"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/textView2"
@@ -48,6 +63,7 @@
             android:layout_marginTop="@dimen/_24sdp"
             android:textColor="@android:color/black"
             app:box_margin="6dp"
+            app:chainUseRtl="false"
             app:height="45dp"
             app:hide_otp="false"
             app:hide_otp_drawable="@drawable/bg_otp_box_hide"
@@ -55,7 +71,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintVertical_bias="0.100000024"
+            app:layout_constraintVertical_bias="0.0"
             app:length="6"
             app:otp=""
             app:otp_box_background="@drawable/bg_otp_box"
@@ -67,15 +83,46 @@
             app:width="40dp" />
 
         <Button
-            android:id="@+id/idBtnVerify"
+            android:id="@+id/tryAgain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Verify OTP"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:background="@drawable/round3_button"
+            android:text="@string/send_another_code"
+            android:textColor="@color/green"
+            android:textSize="@dimen/_15ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/otp_view" />
+
+        <com.apachat.loadingbutton.core.customViews.CircularProgressButton
+            android:id="@+id/idBtnVerify"
+            style="@style/loginButton"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/login_button_bk"
+            android:text="@string/verify_code"
+            android:textColor="@color/white"
+            app:initialCornerAngle="27dp"
+            app:layout_constraintBottom_toTopOf="@+id/img_hexagon2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tryAgain"
+            app:spinning_bar_color="#FFF"
+            app:spinning_bar_padding="6dp"
+            app:spinning_bar_width="4dp" />
+
+        <ImageView
+            android:id="@+id/img_hexagon2"
+            android:layout_width="180dp"
+            android:layout_height="170dp"
+            android:layout_gravity="start"
+            android:contentDescription="@android:string/ok"
+            android:scaleType="fitXY"
+            android:src="@drawable/artificial_plant2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="@string/bias0"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
